# info-collector

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  config.yaml.example  main.py  pyproject.toml
info_collector/: connpass.py  rss.py  settings.py
